Replaceing get 0 with getFirst