@@ -139,7 +139,7 @@ public class IntersectionReferenceAlignmentEventRepositoryImplTest {
         Page<IntersectionReferenceAlignmentEvent> page = repository.findLatest(intersectionID, startTime, endTime);
 
         assertThat(page.getContent()).hasSize(1);
-        assertThat(page.getContent().get(0).getIntersectionID()).isEqualTo(intersectionID);
+        assertThat(page.getContent().getFirst().getIntersectionID()).isEqualTo(intersectionID);
         verify(mongoTemplate).findOne(any(Query.class), eq(IntersectionReferenceAlignmentEvent.class),
                 eq("CmIntersectionReferenceAlignmentEvents"));
     }
