@@ -57,7 +57,7 @@ class SpatMessageCountProgressionRepositoryImplTest {
         Page<SpatMessageCountProgressionEvent> page = repository.findLatest(intersectionID, startTime, endTime);
 
         assertThat(page.getContent()).hasSize(1);
-        assertThat(page.getContent().get(0).getIntersectionID()).isEqualTo(intersectionID);
+        assertThat(page.getContent().getFirst().getIntersectionID()).isEqualTo(intersectionID);
         verify(mongoTemplate).findOne(any(Query.class), eq(SpatMessageCountProgressionEvent.class),
                 eq("CmSpatMessageCountProgressionEvents"));
     }
