@@ -142,7 +142,7 @@ public class StopLineStopEventRepositoryImplTest {
         Page<StopLineStopEvent> page = repository.findLatest(intersectionID, startTime, endTime);
 
         assertThat(page.getContent()).hasSize(1);
-        assertThat(page.getContent().get(0).getIntersectionID()).isEqualTo(intersectionID);
+        assertThat(page.getContent().getFirst().getIntersectionID()).isEqualTo(intersectionID);
         verify(mongoTemplate).findOne(any(Query.class), eq(StopLineStopEvent.class),
                 eq("CmStopLineStopEvent"));
     }
