@@ -138,7 +138,7 @@ public class TimeChangeDetailsEventRepositoryImplTest {
         Page<TimeChangeDetailsEvent> page = repository.findLatest(intersectionID, startTime, endTime);
 
         assertThat(page.getContent()).hasSize(1);
-        assertThat(page.getContent().get(0).getIntersectionID()).isEqualTo(intersectionID);
+        assertThat(page.getContent().getFirst().getIntersectionID()).isEqualTo(intersectionID);
         verify(mongoTemplate).findOne(any(Query.class), eq(TimeChangeDetailsEvent.class),
                 eq("CmSpatTimeChangeDetailsEvent"));
     }
