@@ -144,7 +144,7 @@ public class ProcessedMapRepositoryImplTest {
         Aggregation capturedAggregation = aggregationCaptor.getValue();
 
         // Extract the MatchOperation from the Aggregation pipeline
-        Document pipeline = capturedAggregation.toPipeline(Aggregation.DEFAULT_CONTEXT).get(0);
+        Document pipeline = capturedAggregation.toPipeline(Aggregation.DEFAULT_CONTEXT).getFirst();
 
         // Assert the Match operation Criteria
         assertThat(pipeline.toJson())
@@ -153,7 +153,7 @@ public class ProcessedMapRepositoryImplTest {
                         intersectionID, startTimeString, endTimeString));
 
         // Serialize results to JSON and compare with the original JSON
-        String resultJson = objectMapper.writeValueAsString(findResponse.getContent().get(0));
+        String resultJson = objectMapper.writeValueAsString(findResponse.getContent().getFirst());
 
         // Remove unused fields from each entry
         List<Document> expectedResult = sampleDocuments.stream().map(doc -> {
@@ -161,7 +161,7 @@ public class ProcessedMapRepositoryImplTest {
             doc.remove("recordGeneratedAt");
             return doc;
         }).toList();
-        String expectedJson = objectMapper.writeValueAsString(expectedResult.get(0));
+        String expectedJson = objectMapper.writeValueAsString(expectedResult.getFirst());
 
         // Compare JSON with ignored fields
         JSONAssert.assertEquals(expectedJson, resultJson, new CustomComparator(
@@ -240,7 +240,7 @@ public class ProcessedMapRepositoryImplTest {
             List<IntersectionReferenceData> result = spyRepo.getIntersectionsContainingPoint(20.0, 10.0);
 
             assertThat(result).hasSize(1);
-            IntersectionReferenceData data = result.get(0);
+            IntersectionReferenceData data = result.getFirst();
             assertThat(data.getIntersectionID()).isEqualTo(1);
             assertThat(data.getRsuIP()).isEqualTo("1.1.1.1");
             assertThat(data.getIntersectionName()).isEqualTo("Intersection1");
