@@ -101,7 +101,7 @@ public class TimeChangeDetailsNotificationRepositoryImplTest {
         Page<TimeChangeDetailsNotification> page = repository.findLatest(intersectionID, startTime, endTime);
 
         assertThat(page.getContent()).hasSize(1);
-        assertThat(page.getContent().get(0).getIntersectionID()).isEqualTo(intersectionID);
+        assertThat(page.getContent().getFirst().getIntersectionID()).isEqualTo(intersectionID);
         verify(mongoTemplate).findOne(any(Query.class), eq(TimeChangeDetailsNotification.class),
                 eq("CmTimeChangeDetailsNotification"));
     }
