@@ -155,7 +155,7 @@ public class ProcessedSpatRepositoryImplTest {
         Aggregation capturedAggregation = aggregationCaptor.getValue();
 
         // Extract the MatchOperation from the Aggregation pipeline
-        Document pipeline = capturedAggregation.toPipeline(Aggregation.DEFAULT_CONTEXT).get(0);
+        Document pipeline = capturedAggregation.toPipeline(Aggregation.DEFAULT_CONTEXT).getFirst();
 
         // Assert the Match operation Criteria
         assertThat(pipeline.toJson())
@@ -164,7 +164,7 @@ public class ProcessedSpatRepositoryImplTest {
                         intersectionID, startTimeString, endTimeString));
 
         // Serialize results to JSON and compare with the original JSON
-        String resultJson = objectMapper.writeValueAsString(findResponse.getContent().get(0));
+        String resultJson = objectMapper.writeValueAsString(findResponse.getContent().getFirst());
 
         // Remove unused fields from each entry
         List<Document> expectedResult = sampleDocuments.stream().map(doc -> {
@@ -172,33 +172,33 @@ public class ProcessedSpatRepositoryImplTest {
             doc.remove("recordGeneratedAt");
             return doc;
         }).toList();
-        String expectedJson = objectMapper.writeValueAsString(expectedResult.get(0));
+        String expectedJson = objectMapper.writeValueAsString(expectedResult.getFirst());
 
         // Compare JSON with ignored fields
         JSONAssert.assertEquals(expectedJson, resultJson, new CustomComparator(
                 JSONCompareMode.LENIENT, // Allows different key orders
                 new Customization("properties.timeStamp", (_, _) -> true),
-                        new Customization("properties.odeReceivedAt", (_, _) -> true),
+                new Customization("properties.odeReceivedAt", (_, _) -> true),
                 new Customization("properties.odeReceivedAt", (_, _) -> true),
                 new Customization(
                         "states[signalGroup=2].stateTimeSpeed[eventState=PROTECTED_CLEARANCE].timing.maxEndTime",
                         (_, _) -> true),
-                        new Customization(
+                new Customization(
                         "states[signalGroup=2].stateTimeSpeed[eventState=PROTECTED_CLEARANCE].timing.minEndTime",
                         (_, _) -> true),
-                        new Customization(
+                new Customization(
                         "states[signalGroup=4].stateTimeSpeed[eventState=STOP_AND_REMAIN].timing.maxEndTime",
                         (_, _) -> true),
-                        new Customization(
+                new Customization(
                         "states[signalGroup=4].stateTimeSpeed[eventState=STOP_AND_REMAIN].timing.minEndTime",
                         (_, _) -> true),
-                        new Customization(
+                new Customization(
                         "states[signalGroup=6].stateTimeSpeed[eventState=PROTECTED_CLEARANCE].timing.maxEndTime",
                         (_, _) -> true),
-                        new Customization(
+                new Customization(
                         "states[signalGroup=6].stateTimeSpeed[eventState=PROTECTED_CLEARANCE].timing.minEndTime",
                         (_, _) -> true),
-                        new Customization(
+                new Customization(
                         "utcTimeStamp",
                         (_, _) -> true)));
     }
